[project]
name = 'streamlit-flusight'
description = 'Data-driven FluSight Site'
license = {text = 'MIT License'}
readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ['version']

dependencies = [
    'cloudpathlib[S3]',
    'duckdb',
    'ibis-framework[duckdb]',
    'pandas',
    'polars',
    'pyarrow',
    'streamlit',
    'streamlit-dynamic-filters',
    'structlog',
]

[project.optional-dependencies]
dev = [
    'coverage',
    'mypy',
    'pre-commit',
    'pytest',
    'ruff',
]

[project.entry-points.'console_scripts']
flusight = 'flusight.app:main'

[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools', 'wheel']

[tools.setuptools]
packages = ['flusight']

[tool.ruff]
line-length = 120
lint.extend-select = ['I', 'Q']

[tool.setuptools.dynamic]
version = {attr = 'flusight.__version__'}
