[project]
name = 'streamlit-flusight'
description = 'Data-driven FluSight Site'
license = {text = 'MIT License'}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ['version']

dependencies = [
    'cloudpathlib[S3]',
    'duckdb',
    'ibis-framework[duckdb]',
    'pandas',
    'plotly',
    'polars',
    'pyarrow',
    'scipy',
    'streamlit',
    'streamlit-dynamic-filters',
    'streamlit-aggrid',
    'structlog',
]

[project.optional-dependencies]
dev = [
    'coverage',
    'mypy',
    'pre-commit',
    'pytest',
    'ruff',
]

[project.entry-points.'console_scripts']
flusight = 'flusight.app_entry_point:main'

[build-system]
# setuptools_scm plugin ensures that files checked in to source
# control
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"flusion.data" = ["*.db"]

[tool.ruff]
line-length = 120
lint.extend-select = ['I', 'Q']

[tool.setuptools.dynamic]
version = {attr = 'flusight.__version__'}
